[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interfaces/PurchaseUpgradeButton.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/andika-basic/AndikaNewBasic-R.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 1
font_data = ExtResource( 3 )

[node name="PurchasableUpgrade" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
cost = "10"
upgrade_name = "Placeholder"

[node name="UpgradeList" type="VBoxContainer" parent="."]
margin_right = 76.0
margin_bottom = 98.0

[node name="UpgradeButton" type="Button" parent="UpgradeList"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 2 )

[node name="CostLabel" type="Label" parent="UpgradeList/UpgradeButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
margin_right = -9.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.85098, 0.854902, 0.0901961, 1 )
text = "10"
align = 2
valign = 1

[node name="UpgradeName" type="Label" parent="UpgradeList"]
margin_top = 74.0
margin_right = 76.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "Placeholder"
align = 1
valign = 1
[connection signal="button_up" from="UpgradeList/UpgradeButton" to="." method="_on_UpgradeButton_button_up"]
